dataset1235/2025-2/805158916/users/3229587912/executions/1584167357_2403290319.log
== SUBMISSION (2025-08-27 14:26:29)
-- CODE: 
preco_unitario = float(input))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:28:02)
-- CODE: 
preco_unitario = float(input()))
quantidade = int(input()))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:17:50)
-- CODE: 
numero = int(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:11:14)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:27:58)
-- CODE: 
preco_unitario = float(input()))
quantidade = int(input()))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:10:28)
-- CODE: 
preco = float(input())
quantidade = int(input())
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:47)
-- CODE: 
numero = int(input())
quadrado= numero
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:28:13)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
350.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:17:09)
-- CODE: 
numero = int(input())
quadrado = numero
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:26:45)
-- CODE: 
preco_unitario = float(input))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:11:14)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:17:47)
-- CODE: 
numero = int(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:27:59)
-- CODE: 
preco_unitario = float(input()))
quantidade = int(input()))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:24:43)
-- CODE: 
preco_unitario = float(input))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:10:29)
-- CODE: 
preco = float(input())
quantidade = int(input())
custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:25:23)
-- CODE: 
preco_unitario = float(input()))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:24:42)
-- CODE: 
preco_unitario = float(input))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:25:25)
-- CODE: 
preco_unitario = float(input()))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:25:21)
-- CODE: 
preco_unitario = float(input()))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:25:24)
-- CODE: 
preco_unitario = float(input()))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:16:46)
-- CODE: 
numero = int(input())
quadrado= numero
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:17:08)
-- CODE: 
numero = int(input())
quadrado = numero
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:43)
-- CODE: 
numero = int(input())
quadrado= numero
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:26:30)
-- CODE: 
preco_unitario = float(input))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:17:49)
-- CODE: 
numero = int(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = int(input())
             ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:27:45)
-- CODE: 
preco_unitario = float(input()))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:26:33)
-- CODE: 
preco_unitario = float(input))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:27:46)
-- CODE: 
preco_unitario = float(input()))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:21)
-- CODE: 
preco = int(input())
quadrado= numero
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2432.50'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '45.0'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '66.2'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '38.5'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '122.5'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '87.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:26:40)
-- CODE: 
preco_unitario = float(input))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:23:57)
-- CODE: 
preco_unitario = float(input))
quantidade = int(input))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input))
                                 ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:28:01)
-- CODE: 
preco_unitario = float(input()))
quantidade = int(input()))
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco_unitario = float(input()))
                                   ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
